Issue #3163456 by behindthepage, opdavies: Add default tab styling

--- a/src/tailwind.pcss
+++ b/src/tailwind.pcss
@@ -19,4 +19,8 @@
   .node__content ol {
     @apply mb-4 leading-normal
   }
+
+  [id$="-local-tasks"] ul {
+    @apply list-disc list-inside
+  }
 }
